feat: added basic script

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>audio player</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <div class="site-wrapper">
         <main class="main">
             <div class="player">
+                <audio src="assets/audio/beyonce.mp3" id="audio"></audio>
 
+
+                <button class="player__play-btn">Play audio</button>
+                <button class="player__pause-btn">Stop audio</button>
             </div>
         </main>
         <footer class="footer">
 
         </footer>
     </div>
+
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
